--- a/src/main/resources/static/css/crear.css
+++ b/src/main/resources/static/css/crear.css
@@ -4,6 +4,11 @@ form >p> label,form >p>input, form >p> textarea{
 	width: 100%;
 }
 
+form >p> label,form >p>input, form >p> input{
+
+	display: block;
+	width: 85%;
+}
 
 #enviar{
 	color: #fff;
