--- a/src/main/resources/templates/fragmentos/footer.html
+++ b/src/main/resources/templates/fragmentos/footer.html
@@ -3,8 +3,8 @@
   <div class="container">
   	<div class="row">
   	<div class="col-md-4"><span class="text-muted">Proyecto de DAW</span></div>
-    <div class="col-md-4"><span class="text-muted">María Criado Domínguez</span></div>
-    <div class="col-md-4"><span class="text-muted">Curso 2019-2020</span></div>
+    <div class="col-md-4"><span class="text-muted">MarÃ­a Criado DomÃ­nguez</span></div>
+    <div class="col-md-4"><span class="text-muted">Curso 2020-2021</span></div>
     </div>
   </div>
 </footer>
