--- a/src/main/resources/templates/fragmentos/header.html
+++ b/src/main/resources/templates/fragmentos/header.html
@@ -8,7 +8,7 @@
 				<div id="sp-logo" class="col-sm-12 col-md-12">
 					<div class="sp-column ">
 						<a class="logo" href="index.html">
-							<h1>Viajando con Maria</h1>
+							<h1>Viajando con María</h1>
 							<p class="logo-slogan"></p>
 						</a>
 					</div>
@@ -20,7 +20,7 @@
 
 	
 
-	<nav class="navbar navbar-expand-md  navbar-light  ">
+	<nav class="navbar navbar-expand-md  navbar-light nav ">
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarsExample04" aria-controls="navbarsExample04"
 			aria-expanded="false" aria-label="Toggle navigation">
