--- a/src/main/resources/templates/posts/listaPost.html
+++ b/src/main/resources/templates/posts/listaPost.html
@@ -14,7 +14,7 @@
 	<header th:replace="fragmentos/header.html :: header"></header>
 	<main class="container">
 		<div class="row">
-			<div  class="col-md-9">
+			<div  class="col-md-9 table-responsive">
 				<table  class="table">
 
 					<tr>
@@ -48,6 +48,6 @@
 
 	</main>
 
-
+<div th:replace="fragmentos/footer.html :: footer"> </div>
 </body>
 </html>
