--- a/src/main/resources/templates/usuarios/listaUsuario.html
+++ b/src/main/resources/templates/usuarios/listaUsuario.html
@@ -15,7 +15,7 @@
 
 	<main class="container">
 		<div class="row">
-			<div  class="col-md-9">
+			<div  class="col-md-9 table-responsive">
 				<table class="table">
 
 					<tr>
@@ -52,6 +52,7 @@
 
 	</main>
 
+	<div th:replace="fragmentos/footer.html :: footer"> </div>
 
 </body>
 </html>
