--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -2,6 +2,14 @@
 
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 
+.nav{
+	padding-top: 0rem;
+	padding-right: 5rem;
+}
+header#sp-logo {
+    background: lightgoldenrodyellow;
+}
+
 #sp-logo {
     color: #000;
     text-align: center;
