--- a/src/main/resources/static/css/sticky-footer.css
+++ b/src/main/resources/static/css/sticky-footer.css
@@ -4,10 +4,10 @@
 
 footer .container {
   width: auto;
-  max-width: 680px;
+  max-width: 800px;
   padding: 0 15px;
 }
 
 .footer {
-  background-color: #f5f5f5;
+	 background-color: lightgoldenrodyellow;
 }
