--- a/src/main/resources/templates/perfil/verUsuario.html
+++ b/src/main/resources/templates/perfil/verUsuario.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Ver Perfil</title>
 <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../css/header.css" rel="stylesheet" type="text/css" />
@@ -17,15 +17,17 @@
 		<div class="row">
 			<div  class="col-md-9">
 				<div class="row form">
-				 <form th:object="${usuario}"  method="post" >
-				 	<p>Ver usuario</p>
-				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
-				 	<p><input type="text" placeholder="Nombre" disabled th:field="*{nombre}" /></p>
-				 	<p><input type="text" placeholder="apellidos" disabled th:field="*{apellidos}"/></p>
-				 	<p><input type="email" placeholder="Usuario" disabled th:field="*{correo}"/></p>
-				 	<p><a  class="btn" th:href="@{/perfil/modificarForm}">Modificar</a></p>	
-				 </form>
+				 
+				 <form th:object="${usuario}"  method="post">
+						<p>Ver usuario</p>
+						<p><label>Usuario:</label><input type="text" placeholder="Usuario" disabled th:field="*{username}" />
+						<p><label>Nombre:</label><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
+						<p><label>Apellidos:</label><input type="text" placeholder="apellidos" th:field="*{apellidos}" /></p>
+						<p><label>Email:</label><input type="email" placeholder="correo" th:field="*{correo}" /></p>
+						<p><a  class="btn" th:href="@{/perfil/modificarForm}">Modificar</a></p>	
+					</form>
 				</div>
+				
 				
 			</div>
 			<!------------------------ Aside --------------------------------------->
@@ -35,7 +37,7 @@
 		</div>
 
 	</main>
-
+<div th:replace="fragmentos/footer.html :: footer"> </div>
 
 </body>
 </html>
