--- a/src/main/resources/templates/posts/CerarPost.html
+++ b/src/main/resources/templates/posts/CerarPost.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<header th:replace="fragmentos/header.html :: header"></header>
+	<main class="container">
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col-md-9">
@@ -56,6 +57,8 @@
     </div>
 
 </div>
+</main>
+<div th:replace="fragmentos/footer.html :: footer"> </div>
 </body>
 <script>
     $('.custom-file-input').on('change',function(){
