--- a/src/main/resources/templates/registrado/ListarPost.html
+++ b/src/main/resources/templates/registrado/ListarPost.html
@@ -7,7 +7,7 @@
 <title>Modificar Perfil</title>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="css/header.css" rel="stylesheet" type="text/css" />
-
+	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<header th:replace="fragmentos/header.html :: header"></header>
