--- a/src/main/resources/static/css/crear.css
+++ b/src/main/resources/static/css/crear.css
@@ -9,6 +9,28 @@ form >p> label,form >p>input, form >p> input{
 	display: block;
 	width: 85%;
 }
+div.pull-left {
+	float: left;
+	padding-right: 1rem;
+	max-width: 50%;
+}
+
+.comentario {
+	width: 100%;
+}
+
+.encajap {
+	font-size: 100%;
+	line-height: 150%;
+	margin: 0 0 1.5rem 0;
+}
+
+.encaja>img {
+	width: 50%;
+	max-width: 100%;
+	height: auto;
+	max-height: none;
+}
 
 #enviar{
 	color: #fff;
