--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,7 +1,7 @@
 @charset "ISO-8859-1";
-
+/*
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script:400,700);
-
+*/
 .nav{
 	padding-top: 0rem;
 	padding-right: 5rem;
@@ -9,6 +9,19 @@
 header#sp-logo {
     background: lightgoldenrodyellow;
 }
+
+
+/* latin */
+@font-face {
+  font-family: 'Dancing Script';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../font/If2RXTr6YS-zF4S-kcSWSVi_szLgiuE.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+
 
 #sp-logo {
     color: #000;
