--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Insert title here</title>
-	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="../css/header.css" rel="stylesheet" type="text/css" />
-	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Viajando con Maria</title>
+<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="../css/header.css" rel="stylesheet" type="text/css" />
+<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 
 </head>
 
 <body>
 
 	<header th:replace="fragmentos/header.html :: header"></header>
-	
+
 	<main class="container">
 		<div class="row">
 			<!-------------------------Post principal----------------------------------->
 			<div class="col-md-9 postprinci container">
 				<div class="row postp">
-					<h1 th:text="${post.titulo}"></h1>
-					<p  th:text="${post.fecha}"></p>
-					<img th:src="@{${ruta}+${post.foto}}"><img>
-					<p th:text="${post.post}"></p>
-					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post -></a>
-					
+					<div class="container">
+						<h1 th:text="${post.titulo}"></h1>
+					</div>
+					<div  class="fecha"><div><p  th:text="${post.fecha}"></p></div></div>
+					<div>
+						<p class="encajap">
+						<div class="encaja">
+							<img th:src="@{${ruta}+${post.foto}}" />
+						</div>
+						<span th:text="${post.post}"> </span>
+						</p>
+					</div>
 				</div>
+				<div th:if="${sig}">
+					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post 	-></a>
+				</div>
+
+				
 				<div class="row">
 					<div class=" row anteriores">
 						<div class="col-md-4">
 							<div>
-							<h5 th:text="${sig.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig.foto}}"><img>
-							<p th:text="${sig.post}"></p>
+								<h5 th:text="${sig.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig.foto}}"><img>
+								<p th:text="${sig.post}"></p>
 							</div>
 							<a th:href="@{/post/verpost(id=${sig.postid})}">Leer mas</a>
 						</div>
 						<div class="col-md-4">
 							<div>
-							<h5 th:text="${sig1.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig1.foto}}"><img>
-							<p th:text="${sig1.post}"></p>
+								<h5 th:text="${sig1.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig1.foto}}"><img>
+								<p th:text="${sig1.post}"></p>
 							</div>
 							<a th:href="@{/post/verpost(id=${sig1.postid})}">Leer mas</a>
 						</div>
 						<div class="col-md-4">
 							<div>
-							<h5 th:text="${sig2.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig2.foto}}"><img>
-							<p th:text="${sig2.post}"></p>
+								<h5 th:text="${sig2.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig2.foto}}"><img>
+								<p th:text="${sig2.post}"></p>
 							</div>
 							<a th:href="@{/post/verpost(id=${sig2.postid})}">Leer mas</a>
 						</div>
@@ -58,6 +70,7 @@
 				</div>
 			</div>
 
+
 			<!------------------------ Aside --------------------------------------->
 			<div class="col-md-3 aside">
 				<div th:replace="fragmentos/aside.html :: aside"></div>
@@ -65,8 +78,8 @@
 		</div>
 
 	</main>
-	
-	<div th:replace="fragmentos/footer.html :: footer"> </div>
+
+	<div th:replace="fragmentos/footer.html :: footer"></div>
 </body>
 
 </html>
