--- a/src/main/resources/templates/registrado/index.html
+++ b/src/main/resources/templates/registrado/index.html
@@ -1,11 +1,11 @@
-<%@ page contentType="text/html; charset=UTF-8" %>
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Insert title here</title>
+	<title>Viajando con Maria</title>
 	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../css/header.css" rel="stylesheet" type="text/css" />
 	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
@@ -21,12 +21,21 @@
 			<!-------------------------Post principal----------------------------------->
 			<div class="col-md-9 postprinci container">
 				<div class="row postp">
-					<h1 th:text="${post.titulo}"></h1>
-					<p  th:text="${post.fecha}"></p>
-					<img th:src="@{${ruta}+${post.foto}}"><img>
-					<p th:text="${post.post}"></p>
-					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post -></a>
-					
+					<div class="container">
+						<h1 th:text="${post.titulo}"></h1>
+					</div>
+					<div  class="fecha"><div><p  th:text="${post.fecha}"></p></div></div>
+					<div>
+						<p class="encajap">
+						<div class="encaja">
+							<img th:src="@{${ruta}+${post.foto}}" />
+						</div>
+						<span th:text="${post.post}"> </span>
+						</p>
+					</div>
+				</div>
+				<div th:if="${sig}">
+					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post 	-></a>
 				</div>
 				<div class="row">
 					<div class=" row anteriores">
