--- a/src/main/resources/templates/usuarios/verUsuario.html
+++ b/src/main/resources/templates/usuarios/verUsuario.html
@@ -8,7 +8,7 @@
 <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="../../css/header.css" rel="stylesheet" type="text/css" />
 	<link href="../../css/crear.css" rel="stylesheet" type="text/css" />
-
+	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<header th:replace="fragmentos/header.html :: header"></header>
