--- a/src/main/resources/templates/posts/CerarPost.html
+++ b/src/main/resources/templates/posts/CerarPost.html
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-   <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/header.css" rel="stylesheet" type="text/css" />
-	<link href="../../css/crear.css" rel="stylesheet" type="text/css" />
+<link href="../../css/bootstrap.min.css" rel="stylesheet"
+	type="text/css" />
+<link href="../../css/header.css" rel="stylesheet" type="text/css" />
+<link href="../../css/crear.css" rel="stylesheet" type="text/css" />
+<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript"
+	src="../../static/javascript/jquery-3.4.1.js"></script>
+<script type="text/javascript"
+	src="../../static/javascript/validaFormularioRegistrar.js"></script>
+
 </head>
 <body>
 	<header th:replace="fragmentos/header.html :: header"></header>
 	<main class="container">
-<div class="container" style="margin-top: 30px">
-    <div class="row">
-        <div class="col-md-9">
-            <div class="row form">
-                
-                <form th:object="${postt}" th:action="@{/post/crear}" method="post"  enctype="multipart/form-data" >
-                   <p><label>Titulo Post</label>
-                   <input type="text" / th:field="*{titulo}"></p>
-                   
-                    <p><label>Texto</label>
-                   <textarea class="form-control" th:field="*{post}" rows="10"></textarea></p>
-                   
-                   <p><label>categoria</label>
-                   <select class="form-control" th:field="*{categoria}"  >
-					   	<option value="0">Elija una categoria</option>
-						<option th:each="categorias: ${categorias}" th:value="${categorias.categoriaid}" th:text="${categorias.descripcion}"></option>
-					</select>
-					</p>
-                   
-				   <div class="etiquetas">
-					   <label>etiquetas</label>
-						<div  th:each="etiquetas: ${etiquetas}" >				
-						<input type="checkbox" name="etiquetas" th:value="${etiquetas.etiquetaid}" 
-						/><label th:text="${etiquetas.descripcion}"></label>
-				   		</div>
-					</div>
-					
-				
-                   
-                    <div class="form-group">
-						<label>Foto</label>
-                        <label class="custom-file" id="customFile"> 
-                            <input  type="file" class="custom-file-input" name="file">
-                            <span class="custom-file-control form-control-file">Seleccionar</span>
-                        </label>
-                    </div>
-                    <div style="margin-bottom: 10px">
-                        <button type="submit" class="btn btn-success" id="enviar">Enviar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!------------------------ Aside --------------------------------------->
-			<div class="col-md-3 aside">
-				<div th:replace="fragmentos/aside.html :: aside"></div>
-			</div>
-    </div>
+		<div class="container" style="margin-top: 30px">
+			<div class="row">
+				<div class="col-md-9">
+					<div class="row form">
 
-</div>
-</main>
-<div th:replace="fragmentos/footer.html :: footer"> </div>
+						<form th:object="${postt}" th:action="@{/post/crear}"
+							method="post" enctype="multipart/form-data" onsubmit="return valida()">
+							<p>
+								<label>Titulo Post</label> <input type="text"
+									/ th:field="*{titulo}">
+							</p>
+
+							<p>
+								<label>Texto</label>
+								<textarea class="form-control" th:field="*{post}" rows="10"></textarea>
+							</p>
+
+							<p>
+								<label>categoria</label> <select class="form-control"
+									th:field="*{categoria}">
+									<option value="0">Elija una categoria</option>
+									<option th:each="categorias: ${categorias}"
+										th:value="${categorias.categoriaid}"
+										th:text="${categorias.descripcion}"></option>
+								</select>
+							</p>
+
+							<div class="etiquetas">
+								<label>etiquetas</label>
+								<div th:each="etiquetas: ${etiquetas}">
+									<input type="checkbox" name="etiquetas"
+										th:value="${etiquetas.etiquetaid}" /><label
+										th:text="${etiquetas.descripcion}"></label>
+								</div>
+							</div>
+
+
+
+							<div class="form-group">
+								<label>Foto</label> <label class="custom-file" id="customFile">
+									<input type="file" class="custom-file-input" name="file">
+									<span class="custom-file-control form-control-file">Seleccionar</span>
+								</label>
+							</div>
+							<div style="margin-bottom: 10px">
+								<button type="submit" class="btn btn-success" id="enviar">Enviar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+				<!------------------------ Aside --------------------------------------->
+				<div class="col-md-3 aside">
+					<div th:replace="fragmentos/aside.html :: aside"></div>
+				</div>
+			</div>
+
+		</div>
+	</main>
+	<div th:replace="fragmentos/footer.html :: footer"></div>
 </body>
 <script>
-    $('.custom-file-input').on('change',function(){
-        $(this).next('.form-control-file').addClass("selected").html($(this).val());
-    })
+	$('.custom-file-input').on(
+			'change',
+			function() {
+				$(this).next('.form-control-file').addClass("selected").html(
+						$(this).val());
+			})
 </script>
 </html>
