--- a/src/main/resources/templates/posts/FiltradoC.html
+++ b/src/main/resources/templates/posts/FiltradoC.html
@@ -10,6 +10,7 @@
 	<link href="../css/crear.css" rel="stylesheet" type="text/css" />
 	<link href="../css/filtrar.css" rel="stylesheet" type="text/css" />
 	<script src="../javascript/jquery-3.4.1.js"></script>
+<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 
 </head>
 
