--- a/src/main/resources/templates/posts/CerarPost.html
+++ b/src/main/resources/templates/posts/CerarPost.html
@@ -7,9 +7,9 @@
 <link href="../../css/crear.css" rel="stylesheet" type="text/css" />
 <link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript"
-	src="../../static/javascript/jquery-3.4.1.js"></script>
+	src="../javascript/jquery-3.4.1.js"></script>
 <script type="text/javascript"
-	src="../../static/javascript/validaFormularioRegistrar.js"></script>
+	src="../javascript/validaFormularioRegistrar.js"></script>
 
 </head>
 <body>
@@ -56,7 +56,7 @@
 							<div class="form-group">
 								<label>Foto</label> <label class="custom-file" id="customFile">
 									<input type="file" class="custom-file-input" name="file">
-									<span class="custom-file-control form-control-file">Seleccionar</span>
+									<span class="custom-file-control form-control-file btn seleccionar">Seleccionar</span>
 								</label>
 							</div>
 							<div style="margin-bottom: 10px">
