--- a/src/main/resources/templates/fragmentos/asidelogin.html
+++ b/src/main/resources/templates/fragmentos/asidelogin.html
@@ -8,12 +8,14 @@
 			<p><a th:href="@{/registro/form}">Registrarse</a></p>
 		</form>
 	</div>
-	<div class="row cat">
+	<br>
+	<div class="row cat form">
 		<h3>Categorias</h3>
 		<a th:each="categorias: ${categorias}" th:href="@{/post/categoria(id_categoria=${categorias.categoriaid})}"
 			th:text="${categorias.descripcion}"></a>
 	</div>
-	<div class="row eti">
+	<br>
+	<div class="row eti form">
 		<h3>Etiquetas</h3>
 		<a th:each="etiquetas: ${etiquetas}" th:href="@{/post/etiquetas(id_etiqueta=${etiquetas.etiquetaid})}"
 			th:text="${etiquetas.descripcion}"></a>
