--- a/src/main/resources/templates/fragmentos/header.html
+++ b/src/main/resources/templates/fragmentos/header.html
@@ -31,8 +31,7 @@
 			<ul class="navbar-nav mr-auto sp-megamenu-parent">
 				<li class=" nav-item sp-menu-item current-item active"><a href="/">Inicio</a></li>
 					<li class=" nav-item sp-menu-item"><a href="#">Categorias</a></li>
-					<li class=" nav-item sp-menu-item sp-has-child"><a href="#">Sobre mi</a></li>
-					<li class=" nav-item sp-menu-item"><a href="#">Contacto</a></li>
+					<li class=" nav-item sp-menu-item sp-has-child"><a th:href="@{/sobremi}">Sobre mí</a></li>
 			
 			</ul>
 			
