--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div th:if="${sig}">
-					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post
+					<a th:href="@{/posts/verpost(id=${sig.postid})}">Siguiente post
 						-></a>
 				</div>
 
@@ -52,7 +52,7 @@
 								<img th:src="@{${ruta}+${sig.foto}}"><img>
 								<p th:text="${sig.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig.postid})}">Leer mas</a>
 						</div>
 						<div class="col-md-4">
 							<div>
@@ -60,7 +60,7 @@
 								<img th:src="@{${ruta}+${sig1.foto}}"><img>
 								<p th:text="${sig1.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig1.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig1.postid})}">Leer mas</a>
 						</div>
 						<div class="col-md-4">
 							<div>
@@ -68,7 +68,7 @@
 								<img th:src="@{${ruta}+${sig2.foto}}"><img>
 								<p th:text="${sig2.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig2.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig2.postid})}">Leer mas</a>
 						</div>
 
 					</div>
