--- a/src/main/resources/templates/posts/listaPost.html
+++ b/src/main/resources/templates/posts/listaPost.html
@@ -4,7 +4,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="ISO-8859-1">
-<title>Ver Perfil</title>
+<title>Lista Post</title>
 <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="../../css/header.css" rel="stylesheet" type="text/css" />
 <link href="../../css/crear.css" rel="stylesheet" type="text/css" />
