--- a/src/main/resources/templates/registroForm.html
+++ b/src/main/resources/templates/registroForm.html
@@ -28,7 +28,7 @@
 						<p><label>Nombre:</label><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
 						<p><label>Apellidos:</label><input type="text" placeholder="apellidos" th:field="*{apellidos}" /></p>
 						<p><label>Email:</label><input type="email" placeholder="correo" th:field="*{correo}" /></p>
-						<p><input type="submit" value="Registrar" id="entrar"/></p>
+						<p><input class="btn" type="submit" value="Registrar" id="entrar"/></p>
 					</form>
 				</div>
 			
