--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -20,6 +20,14 @@ header#sp-logo {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.anteriores{
+	width: 100%;
+}
+
+.collapse li {
+	display:block
+}
+
 
 
 
@@ -81,7 +89,6 @@ a, a:hover, a:focus, a:active {
 }
 
 .sp-megamenu-parent >li {
-    display: inline-block;
     position: relative;
     padding: 0;
 }
@@ -191,7 +198,7 @@ form input{
 
 h3{
     color: #cf9f6a;
-    padding: 20px;
+    
     display: inline-block;
     font-size: 15px;
     font-weight: bold;
@@ -243,3 +250,21 @@ nav div{
 .comentario ~ div, main{
     clear: both;
 }
+
+.navbar-toggler{
+	float:right;
+}
+
+@media (min-width: 768px){
+	.sp-megamenu-parent >li {
+	display: inline-block;
+}
+}
+
+.navbar button{
+	position: absolute;
+	right: 15px;
+	top:0px;
+}
+
+
