--- a/src/main/resources/templates/fragmentos/asidelogin.html
+++ b/src/main/resources/templates/fragmentos/asidelogin.html
@@ -1,7 +1,8 @@
 <div th:fragment="asidelogin">
-	<div class="row form">
+	<div class="form">
 		<form th:action="@{/login}" method="post">
-			<p>Log in</p>
+			<h3>Log in</h3>
+			<p th:if="error" style="color:Red">No existe el usuario o la contraseña</p>
 			<p><input type="text" placeholder="Usuario" name="username" /></p>
 			<p><input type="password" placeholder="Contrasena" name="password" /></p>
 			<p><input type="submit" value="Entrar" id="entrar" /></p>
@@ -9,13 +10,13 @@
 		</form>
 	</div>
 	<br>
-	<div class="row cat form">
+	<div class=" cat form">
 		<h3>Categorias</h3>
 		<a th:each="categorias: ${categorias}" th:href="@{/post/categoria(id_categoria=${categorias.categoriaid})}"
 			th:text="${categorias.descripcion}"></a>
 	</div>
 	<br>
-	<div class="row eti form">
+	<div class=" eti form">
 		<h3>Etiquetas</h3>
 		<a th:each="etiquetas: ${etiquetas}" th:href="@{/post/etiquetas(id_etiqueta=${etiquetas.etiquetaid})}"
 			th:text="${etiquetas.descripcion}"></a>
